Update sysmon crate. Move to class based analyzers.

--- a/Graph Provision.ipynb
+++ b/Graph Provision.ipynb
@@ -2,38 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting pydgraph\n",
-      "  Downloading https://files.pythonhosted.org/packages/d1/cd/25ac8d97f346fdbed0ad53e04ae2dd8360d0b93efec211d606cdff4a0af7/pydgraph-1.2.0-py2.py3-none-any.whl\n",
-      "Requirement already satisfied: protobuf>=3.6.1 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from pydgraph) (3.6.1)\n",
-      "Collecting grpcio>=1.18.0 (from pydgraph)\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/f2/5d/b434403adb2db8853a97828d3d19f2032e79d630e0d11a8e95d243103a11/grpcio-1.22.0-cp36-cp36m-manylinux1_x86_64.whl (2.2MB)\n",
-      "\u001b[K    100% |████████████████████████████████| 2.2MB 17.4MB/s ta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: six>=1.9 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from protobuf>=3.6.1->pydgraph) (1.11.0)\n",
-      "Requirement already satisfied: setuptools in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from protobuf>=3.6.1->pydgraph) (39.1.0)\n",
-      "Installing collected packages: grpcio, pydgraph\n",
-      "Successfully installed grpcio-1.22.0 pydgraph-1.2.0\n",
-      "\u001b[33mYou are using pip version 10.0.1, however version 19.2.1 is available.\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+      "Requirement already satisfied: pydgraph==1.2.0 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (1.2.0)\n",
+      "Requirement already satisfied: grpcio>=1.18.0 in /home/ec2-user/.local/lib/python3.6/site-packages (from pydgraph==1.2.0) (1.23.0)\n",
+      "Requirement already satisfied: protobuf>=3.6.1 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from pydgraph==1.2.0) (3.6.1)\n",
+      "Requirement already satisfied: six>=1.5.2 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from grpcio>=1.18.0->pydgraph==1.2.0) (1.11.0)\n",
+      "Requirement already satisfied: setuptools in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from protobuf>=3.6.1->pydgraph==1.2.0) (39.1.0)\n"
      ]
     }
    ],
    "source": [
-    "!pip install pydgraph"
+    "!pip install pydgraph==1.2.0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import time\n",
     "import json\n",
     "import pydgraph\n",
     "from pydgraph import DgraphClient, DgraphClientStub"
@@ -41,15 +35,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def set_process_schema(client):\n",
+    "def set_process_schema(client, engagement=False):\n",
     "    \n",
     "    schema = \"\"\"node_key: string @upsert @index(hash) .\n",
-    "    pid: int @index(int) .\n",
-    "    created_time: int @index(int) .\n",
+    "    process_id: int @index(int) .\n",
+    "    created_timestamp: int @index(int) .\n",
     "    asset_id: string @index(hash) .\n",
     "    terminate_time: int @index(int) .\n",
     "    image_name: string @index(exact, hash, trigram, fulltext) .\n",
@@ -62,12 +56,22 @@
     "    read_files: uid @reverse .\n",
     "    wrote_files: uid @reverse .\n",
     "    created_connection: uid @reverse .\n",
-    "    bound_connection: uid @reverse .\"\"\"\n",
+    "    bound_connection: uid @reverse .\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    if engagement:\n",
+    "        schema += \"\\n\"\n",
+    "        schema += \"risks: uid @reverse .\"\n",
+    "        \n",
+    "    # unstable\n",
+    "    schema += \"\"\"\n",
+    "        process_guid: string @index(exact, hash, trigram, fulltext) .\n",
+    "    \"\"\"    \n",
     "    \n",
     "    op = pydgraph.Operation(schema=schema)\n",
     "    client.alter(op)\n",
     "    \n",
-    "def set_file_schema(client):\n",
+    "def set_file_schema(client, engagement=False):\n",
     "    \n",
     "    schema = \"\"\"\n",
     "    node_key: string @upsert @index(hash) .\n",
@@ -84,10 +88,16 @@
     "    file_directory: string @index(exact, hash, trigram, fulltext) .\n",
     "    file_inode: int @index(int) .\n",
     "    file_hard_links: string @index(exact, hash, trigram, fulltext) .\n",
+    "    signed: bool @index(bool) .\n",
+    "    signed_status: string @index(exact, hash, trigram, fulltext) .\n",
     "    md5_hash: string @index(exact, hash, trigram, fulltext) .\n",
     "    sha1_hash: string @index(exact, hash, trigram, fulltext) .\n",
     "    sha256_hash: string @index(exact, hash, trigram, fulltext) .\n",
     "    \"\"\"\n",
+    "    if engagement:\n",
+    "        schema += \"\\n\"\n",
+    "        schema += \"risks: uid @reverse .\"\n",
+    "        \n",
     "    op = pydgraph.Operation(schema=schema)\n",
     "    client.alter(op)\n",
     "    \n",
@@ -100,6 +110,24 @@
     "        ip: string @index(exact, trigram, hash) .\n",
     "        port: string @index(exact, trigram, hash) .\n",
     "    \"\"\"\n",
+    "    if engagement:\n",
+    "        schema += \"\\n\"\n",
+    "        schema += \"risks: uid @reverse .\"\n",
+    "        \n",
+    "    op = pydgraph.Operation(schema=schema)\n",
+    "    client.alter(op)\n",
+    "    \n",
+    "    \n",
+    "def set_inbound_connection_schema(client, engagement=False):\n",
+    "    schema = \"\"\"\n",
+    "        node_key: string @upsert @index(hash) .\n",
+    "        asset_id: string @index(exact, hash, trigram, fulltext) .\n",
+    "        port: string @index(exact, trigram, hash) .\n",
+    "    \"\"\"\n",
+    "    if engagement:\n",
+    "        schema += \"\\n\"\n",
+    "        schema += \"risks: uid @reverse .\"\n",
+    "        \n",
     "    op = pydgraph.Operation(schema=schema)\n",
     "    client.alter(op)\n",
     "    \n",
@@ -108,45 +136,101 @@
     "    schema = \"\"\"\n",
     "        external_ip: string @index(exact, trigram, hash) .\n",
     "    \"\"\"\n",
+    "    if engagement:\n",
+    "        schema += \"\\n\"\n",
+    "        schema += \"risks: uid @reverse .\"\n",
+    "        \n",
     "    op = pydgraph.Operation(schema=schema)\n",
+    "    client.alter(op)\n",
+    "    \n",
+    "    \n",
+    "def set_risk_schema(client, engagement=False):\n",
+    "    schema = \"\"\"\n",
+    "        analyzer_name: string @index(exact, trigram, hash) .\n",
+    "        risk_score: int @index(int) .\n",
+    "    \"\"\"\n",
+    "    op = pydgraph.Operation(schema=schema)\n",
+    "    client.alter(op)\n",
+    "    \n",
+    "def set_lens_schema(client, engagement=False):\n",
+    "    schema = \"\"\"\n",
+    "        scope: uid @reverse .\n",
+    "        lens: string @upsert @index(exact, trigram, hash) .\n",
+    "        score: int @index(int) .\n",
+    "    \"\"\"\n",
+    "    op = pydgraph.Operation(schema=schema)\n",
+    "    client.alter(op)\n",
+    "    \n",
+    "def drop_all(client):\n",
+    "    op = pydgraph.Operation(drop_all=True)\n",
     "    client.alter(op)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "mclient = DgraphClient(DgraphClientStub('alpha0.mastergraphcluster.grapl:9080'))\n",
-    "eclient = DgraphClient(DgraphClientStub('alpha0.engagementgraphcluster.grapl:9080'))"
+    "eclient = DgraphClient(DgraphClientStub('alpha1.engagementgraphcluster.grapl:9080'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# drop_all(mclient)\n",
+    "# drop_all(eclient)\n",
+    "# master nodes\n",
+    "\n",
+    "for i in range(0, 3):\n",
+    "    set_process_schema(mclient)\n",
+    "    set_file_schema(mclient)\n",
+    "    set_outbound_connection_schema(mclient)\n",
+    "    set_inbound_connection_schema(mclient)\n",
+    "    set_external_ip_schema(mclient)\n",
+    "\n",
+    "    # engagement nodes\n",
+    "    set_process_schema(eclient, engagement=True)\n",
+    "    set_file_schema(eclient, engagement=True)\n",
+    "    set_outbound_connection_schema(eclient, engagement=True)\n",
+    "    set_inbound_connection_schema(eclient, engagement=True)\n",
+    "    set_external_ip_schema(eclient, engagement=True)\n",
+    "    set_risk_schema(eclient, engagement=True)\n",
+    "    set_lens_schema(eclient, engagement=True)\n",
+    "    time.sleep(0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# master nodes\n",
-    "set_process_schema(mclient)\n",
-    "set_file_schema(mclient)\n",
-    "set_outbound_connection_schema(mclient)\n",
-    "set_external_ip_schema(mclient)\n",
+    "# CLEAR CACHE\n",
+    "def clear_redis_caches():\n",
+    "    from redis import Redis\n",
     "\n",
-    "# engagement nodes\n",
-    "set_process_schema(eclient)\n",
-    "set_file_schema(eclient)\n",
-    "set_outbound_connection_schema(eclient)\n",
-    "set_external_ip_schema(eclient)"
+    "    def chunker(seq, size):\n",
+    "        return [seq[pos:pos + size] for pos in range(0, len(seq), size)]\n",
+    "    red = Redis()\n",
+    "    CACHE_ADDRS = [\n",
+    "        \"gra-gr-1h7vxdadzip98.b2fixp.0001.use1.cache.amazonaws.com\",\n",
+    "        \"gra-gr-1o2uc0akc68z4.b2fixp.0001.use1.cache.amazonaws.com\",\n",
+    "        \"gra-gr-2mhiu3q9eilo.b2fixp.0001.use1.cache.amazonaws.com\"\n",
+    "    ]\n",
+    "    CACHE_PORT = 6379\n",
+    "    for CACHE_ADDR in CACHE_ADDRS:\n",
+    "        r = Redis(host=CACHE_ADDR, port=CACHE_PORT, db=0, decode_responses=True)\n",
+    "\n",
+    "        for keys in chunker([k for k in r.keys()], 10000):\n",
+    "            r.delete(*keys)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
