--- a/Graph Provision.ipynb
+++ b/Graph Provision.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 68,
    "metadata": {
     "scrolled": true
    },
@@ -203,12 +203,95 @@
     "    set_external_ip_schema(eclient, engagement=True)\n",
     "    set_risk_schema(eclient, engagement=True)\n",
     "    set_lens_schema(eclient, engagement=True)\n",
-    "    time.sleep(0.5)"
+    "    time.sleep(1.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "your password is &:e4\"2IJD7omVmWt\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "Replace the username with your desired username",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-71-e7e2a26971bd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     46\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'your password is {password}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[0musername\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m''\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 48\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0musername\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Replace the username with your desired username'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     49\u001b[0m \u001b[0mcreate_user\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0musername\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpassword\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: Replace the username with your desired username"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import string\n",
+    "\n",
+    "from hashlib import blake2b, sha256\n",
+    "from random import randint, choice\n",
+    "\n",
+    "import boto3\n",
+    "\n",
+    "def hash_password(cleartext, salt) -> str:\n",
+    "    hashed = sha256(cleartext).digest()\n",
+    "    hasher = blake2b(salt=salt)\n",
+    "    hasher.update(hashed)\n",
+    "    return hasher.digest()\n",
+    "\n",
+    "\n",
+    "def create_user(username, cleartext):\n",
+    "    assert cleartext\n",
+    "    dynamodb = boto3.resource('dynamodb')\n",
+    "    table = dynamodb.Table('user_auth_table')\n",
+    "    # We hash before calling 'hashed_password' because the frontend will also perform\n",
+    "    # client side hashing\n",
+    "    cleartext += \"f1dafbdcab924862a198deaa5b6bae29aef7f2a442f841da975f1c515529d254\";\n",
+    "\n",
+    "    hashed = sha256(cleartext.encode('utf8')).hexdigest()\n",
+    "    \n",
+    "    for i in range(0, 5000):\n",
+    "        hashed = sha256(hashed.encode('utf8')).hexdigest()\n",
+    "    \n",
+    "    print(hashed)\n",
+    "    salt = os.urandom(blake2b.SALT_SIZE)\n",
+    "    password = hash_password(hashed.encode('utf8'), salt)\n",
+    "#     str(salt)\n",
+    "#     str(password)\n",
+    "    table.put_item(\n",
+    "        Item={\n",
+    "            'username': username,\n",
+    "            'salt': salt,\n",
+    "            'password': password\n",
+    "        }\n",
+    "    )\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "allchar = string.ascii_letters + string.punctuation + string.digits\n",
+    "password = \"\".join(choice(allchar) for x in range(randint(14, 16)))\n",
+    "print(f'your password is {password}')\n",
+    "username = ''\n",
+    "assert username, 'Replace the username with your desired username'\n",
+    "create_user(username, password)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +312,9 @@
     "        r = Redis(host=CACHE_ADDR, port=CACHE_PORT, db=0, decode_responses=True)\n",
     "\n",
     "        for keys in chunker([k for k in r.keys()], 10000):\n",
-    "            r.delete(*keys)"
+    "            r.delete(*keys)\n",
+    "            \n",
+    "clear_redis_caches()"
    ]
   }
  ],
