--- a/Grapl Provision.ipynb
+++ b/Grapl Provision.ipynb
@@ -215,6 +215,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import string\n",
+    "\n",
+    "from hashlib import blake2b, sha256\n",
+    "from random import randint, choice\n",
+    "\n",
+    "import boto3\n",
+    "\n",
+    "def hash_password(cleartext, salt) -> str:\n",
+    "    hashed = sha256(cleartext).digest()\n",
+    "    hasher = blake2b(salt=salt)\n",
+    "    hasher.update(hashed)\n",
+    "    return hasher.digest()\n",
+    "\n",
+    "\n",
+    "def create_user(username, cleartext):\n",
+    "    assert cleartext\n",
+    "    dynamodb = boto3.resource('dynamodb')\n",
+    "    table = dynamodb.Table('user_auth_table')\n",
+    "    # We hash before calling 'hashed_password' because the frontend will also perform\n",
+    "    # client side hashing\n",
+    "    cleartext += \"f1dafbdcab924862a198deaa5b6bae29aef7f2a442f841da975f1c515529d254\";\n",
+    "\n",
+    "    hashed = sha256(cleartext.encode('utf8')).hexdigest()\n",
+    "    \n",
+    "    for i in range(0, 5000):\n",
+    "        hashed = sha256(hashed.encode('utf8')).hexdigest()\n",
+    "    \n",
+    "    print(hashed)\n",
+    "    salt = os.urandom(blake2b.SALT_SIZE)\n",
+    "    password = hash_password(hashed.encode('utf8'), salt)\n",
+    "#     str(salt)\n",
+    "#     str(password)\n",
+    "    table.put_item(\n",
+    "        Item={\n",
+    "            'username': username,\n",
+    "            'salt': salt,\n",
+    "            'password': password\n",
+    "        }\n",
+    "    )\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "allchar = string.ascii_letters + string.punctuation + string.digits\n",
+    "password = \"\".join(choice(allchar) for x in range(randint(14, 16)))\n",
+    "print(f'your password is {password}')\n",
+    "username = ''\n",
+    "assert username, 'Replace the username with your desired username'\n",
+    "create_user(username, password)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 71,
    "metadata": {},
    "outputs": [
@@ -335,6 +397,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.5"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
