--- a/Grapl Provision.ipynb
+++ b/Grapl Provision.ipynb
@@ -68,7 +68,7 @@
     "    \n",
     "    @staticmethod\n",
     "    def self_type() -> str:\n",
-    "        return 'Risk'\n",
+    "        return 'Lens'\n",
     "    \n",
     "def set_schema(client, schema, engagement=False):\n",
     "    if engagement:\n",
