Various fixes for Networking

--- a/Grapl Provision.ipynb
+++ b/Grapl Provision.ipynb
@@ -34,7 +34,8 @@
     "import pydgraph\n",
     "\n",
     "from pydgraph import DgraphClient, DgraphClientStub\n",
-    "from grapl_analyzerlib.schemas import *"
+    "from grapl_analyzerlib.schemas import *\n",
+    "from grapl_analyzerlib.schemas.schema_builder import *"
    ]
   },
   {
@@ -43,6 +44,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "class AnyNodeSchema(NodeSchema):\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def self_type() -> str:\n",
+    "        return 'Any'\n",
+    "\n",
     "class RiskSchema(NodeSchema):\n",
     "    def __init__(self):\n",
     "        super(RiskSchema, self).__init__()\n",
@@ -63,12 +70,12 @@
     "            self\n",
     "            .with_str_prop('lens')\n",
     "            .with_int_prop('score')\n",
-    "            .with_forward_edge('scope', [AnyNodeSchema])\n",
+    "            .with_forward_edge('scope', OneToMany(AnyNodeSchema), 'in_scope')\n",
     "        )\n",
     "    \n",
     "    @staticmethod\n",
     "    def self_type() -> str:\n",
-    "        return 'Risk'\n",
+    "        return 'Lens'\n",
     "    \n",
     "def set_schema(client, schema, engagement=False):\n",
     "    if engagement:\n",
@@ -114,7 +121,7 @@
    "outputs": [],
    "source": [
     "# drop_all(mclient)\n",
-    "drop_all(eclient)\n",
+    "# drop_all(eclient)\n",
     "\n",
     "schemas = (\n",
     "    ProcessSchema(), \n",
