Fix ux deployment and Graph Provision

--- a/Grapl Provision.ipynb
+++ b/Grapl Provision.ipynb
@@ -43,6 +43,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "class AnyNodeSchema(NodeSchema):\n",
+    "    @staticmethod\n",
+    "    def self_type() -> str:\n",
+    "        return 'Any'\n",
+    "\n",
     "class RiskSchema(NodeSchema):\n",
     "    def __init__(self):\n",
     "        super(RiskSchema, self).__init__()\n",
@@ -63,7 +68,7 @@
     "            self\n",
     "            .with_str_prop('lens')\n",
     "            .with_int_prop('score')\n",
-    "            .with_forward_edge('scope', [AnyNodeSchema])\n",
+    "            .with_forward_edge('scope', [AnyNodeSchema], 'in_scope')\n",
     "        )\n",
     "    \n",
     "    @staticmethod\n",
@@ -114,18 +119,13 @@
    "outputs": [],
    "source": [
     "# drop_all(mclient)\n",
-    "drop_all(eclient)\n",
+    "# drop_all(eclient)\n",
     "\n",
     "schemas = (\n",
     "    ProcessSchema(), \n",
     "    FileSchema(), \n",
     "    OutboundConnectionSchema(), \n",
     "    ExternalIpSchema(), \n",
-    "    AuidSchema(),\n",
-    "    AuidAssumptionSchema(),\n",
-    "    UserIdSchema(),\n",
-    "    UserIdAssumptionSchema(),\n",
-    "    IpcSchema()\n",
     ")\n",
     "\n",
     "schema_str = format_schemas(schemas)\n",
