--- a/Grapl Provision.ipynb
+++ b/Grapl Provision.ipynb
@@ -433,17 +433,19 @@
     "import os\n",
     "import string\n",
     "\n",
-    "from hashlib import blake2b, sha256\n",
+    "from hashlib import pbkdf2_hmac, sha256\n",
     "from random import randint, choice\n",
     "\n",
     "import boto3\n",
     "\n",
     "def hash_password(cleartext, salt) -> str:\n",
     "    hashed = sha256(cleartext).digest()\n",
-    "    hasher = blake2b(salt=salt)\n",
-    "    hasher.update(hashed)\n",
-    "    return hasher.digest()\n",
-    "\n",
+    "    return pbkdf2_hmac(\n",
+    "        'sha256', \n",
+    "        hashed,\n",
+    "        salt,\n",
+    "        512000\n",
+    "    ).hex()\n",
     "\n",
     "def create_user(username, cleartext):\n",
     "    assert cleartext\n",
@@ -463,7 +465,7 @@
     "        hashed = sha256(hashed.encode('utf8')).hexdigest()\n",
     "    \n",
     "    print(hashed)\n",
-    "    salt = os.urandom(blake2b.SALT_SIZE)\n",
+    "    salt = os.urandom(16)\n",
     "    password = hash_password(hashed.encode('utf8'), salt)\n",
     "#     str(salt)\n",
     "#     str(password)\n",
