--- a/Grapl Provision.ipynb
+++ b/Grapl Provision.ipynb
@@ -454,8 +454,7 @@
     "    \n",
     "    # We hash before calling 'hashed_password' because the frontend will also perform\n",
     "    # client side hashing\n",
-    "    cleartext += \n",
-    "    \"f1dafbdcab924862a198deaa5b6bae29aef7f2a442f841da975f1c515529d254\";\n",
+    "    cleartext += \"f1dafbdcab924862a198deaa5b6bae29aef7f2a442f841da975f1c515529d254\";\n",
     "    \n",
     "    cleartext += username;\n",
     "\n",
