Optimize the hell outta these docker images

--- a/local_grapl/Untitled.ipynb
+++ b/local_grapl/Untitled.ipynb
@@ -53,11 +53,7 @@
     "\n",
     "res = (\n",
     "    ProcessQuery()\n",
-    "#         .with_process_name(eq=invalid_parents)\n",
-    "#         .with_children(\n",
-    "#             ProcessQuery().with_process_name(eq=\"svchost.exe\")\n",
-    "#         )\n",
-    "    .query_first(eclient)\n",
+    "    .query_first(mclient)\n",
     ")\n",
     "# res.get_process_name()\n",
     "pprint(res)"
