Support AWS and local

--- a/Grapl Provision.ipynb
+++ b/Grapl Provision.ipynb
@@ -406,8 +406,7 @@
     "eg_schemas = [s.with_forward_edge('risks', ManyToMany(RiskSchema), 'risky_nodes') for s in schemas]\n",
     "eg_schemas.extend([risk_schema, lens_schema])\n",
     "eg_schema_str = format_schemas(eg_schemas)\n",
-    "set_schema(eclient, eg_schema_str)\n",
-    "print(eg_schema_str)"
+    "set_schema(eclient, eg_schema_str)"
    ]
   },
   {
@@ -463,11 +462,8 @@
     "    for i in range(0, 5000):\n",
     "        hashed = sha256(hashed.encode('utf8')).hexdigest()\n",
     "    \n",
-    "    print(hashed)\n",
     "    salt = os.urandom(16)\n",
     "    password = hash_password(hashed.encode('utf8'), salt)\n",
-    "#     str(salt)\n",
-    "#     str(password)\n",
     "    table.put_item(\n",
     "        Item={\n",
     "            'username': username,\n",
@@ -491,7 +487,11 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# CLEAR CACHE\n",
@@ -500,14 +500,8 @@
     "\n",
     "    def chunker(seq, size):\n",
     "        return [seq[pos:pos + size] for pos in range(0, len(seq), size)]\n",
-    "    red = Redis()\n",
+    "\n",
     "    CACHE_ADDRS = [\n",
-    "        \"gra-gr-10aa29jmk4wix.b2fixp.0001.use1.cache.amazonaws.com\",\n",
-    "        \"gra-gr-rg9srjl5cheq.b2fixp.0001.use1.cache.amazonaws.com\",\n",
-    "        \"gra-gr-zpsc8bsa5os7.b2fixp.0001.use1.cache.amazonaws.com\",\n",
-    "        \"gra-gr-xeat1l4fmizc.b2fixp.0001.use1.cache.amazonaws.com\",\n",
-    "        \"gra-gr-9bqx2o1ugzmg.b2fixp.0001.use1.cache.amazonaws.com\",\n",
-    "        \"gra-gr-12k2xqc0dow0u.b2fixp.0001.use1.cache.amazonaws.com\",\n",
     "    \n",
     "    ]\n",
     "    CACHE_PORT = 6379\n",
@@ -517,84 +511,7 @@
     "        for keys in chunker([k for k in r.keys()], 10000):\n",
     "            r.delete(*keys)\n",
     "            \n",
-    "clear_redis_caches()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "ClientError",
-     "evalue": "An error occurred (AccessDeniedException) when calling the DescribeTable operation: User: arn:aws:sts::251074890252:assumed-role/engagements-notebook-stac-engagementsnotebookroleB-1IT7DTA5AJPWS/SageMaker is not authorized to perform: dynamodb:DescribeTable on resource: arn:aws:dynamodb:us-east-1:251074890252:table/process_history_table",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mClientError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-fd3c5382cb29>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     47\u001b[0m        \u001b[0;34m'process_history_table'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m        \u001b[0;34m'file_history_table'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 49\u001b[0;31m        \u001b[0;34m'node_id_retry_table'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     50\u001b[0m     ])\n",
-      "\u001b[0;32m<ipython-input-9-fd3c5382cb29>\u001b[0m in \u001b[0;36mreset_db\u001b[0;34m(table_names)\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mtable_name\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtable_names\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0mdynamodb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mboto3\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclient\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'dynamodb'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mregion_name\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'us-east-1'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m         \u001b[0mtable_description\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdynamodb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdescribe_table\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTableName\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtable_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtable_description\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Table'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/JupyterSystemEnv/lib/python3.6/site-packages/botocore/client.py\u001b[0m in \u001b[0;36m_api_call\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    355\u001b[0m                     \"%s() only accepts keyword arguments.\" % py_operation_name)\n\u001b[1;32m    356\u001b[0m             \u001b[0;31m# The \"self\" in this scope is referring to the BaseClient.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 357\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_make_api_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moperation_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    358\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    359\u001b[0m         \u001b[0m_api_call\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpy_operation_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/JupyterSystemEnv/lib/python3.6/site-packages/botocore/client.py\u001b[0m in \u001b[0;36m_make_api_call\u001b[0;34m(self, operation_name, api_params)\u001b[0m\n\u001b[1;32m    659\u001b[0m             \u001b[0merror_code\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparsed_response\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Error\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Code\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    660\u001b[0m             \u001b[0merror_class\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexceptions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_code\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merror_code\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 661\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0merror_class\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparsed_response\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moperation_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    662\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    663\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mparsed_response\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mClientError\u001b[0m: An error occurred (AccessDeniedException) when calling the DescribeTable operation: User: arn:aws:sts::251074890252:assumed-role/engagements-notebook-stac-engagementsnotebookroleB-1IT7DTA5AJPWS/SageMaker is not authorized to perform: dynamodb:DescribeTable on resource: arn:aws:dynamodb:us-east-1:251074890252:table/process_history_table"
-     ]
-    }
-   ],
-   "source": [
-    "import time\n",
-    "import boto3\n",
-    "\n",
-    "def reset_db(table_names):\n",
-    "\n",
-    "    for table_name in table_names:\n",
-    "        dynamodb = boto3.client('dynamodb', region_name='us-east-1')\n",
-    "        table_description = dynamodb.describe_table(TableName=table_name)\n",
-    "\n",
-    "        print(table_description['Table'])\n",
-    "\n",
-    "        # delete table\n",
-    "\n",
-    "        try:\n",
-    "            dynamodb.delete_table(TableName=table_name)\n",
-    "        except Exception as e:\n",
-    "            print('failed to delete {}'.format(e))\n",
-    "            try:\n",
-    "                dynamodb.delete_table(TableName=table_name)\n",
-    "            except Exception as e:\n",
-    "                print('failed to delete {}'.format(e))\n",
-    "\n",
-    "        time.sleep(10)\n",
-    "\n",
-    "        try:\n",
-    "            dynamodb.create_table(\n",
-    "                TableName=table_name,\n",
-    "                AttributeDefinitions=table_description['Table']['AttributeDefinitions'],\n",
-    "\n",
-    "                BillingMode='PAY_PER_REQUEST',\n",
-    "\n",
-    "                KeySchema=table_description['Table']['KeySchema'],\n",
-    "\n",
-    "            )\n",
-    "        except:\n",
-    "            time.sleep(15)\n",
-    "            dynamodb.create_table(\n",
-    "                TableName=table_name,\n",
-    "                AttributeDefinitions=table_description['Table']['AttributeDefinitions'],\n",
-    "\n",
-    "                BillingMode='PAY_PER_REQUEST',\n",
-    "\n",
-    "                KeySchema=table_description['Table']['KeySchema'],\n",
-    "\n",
-    "            )\n",
-    "reset_db([\n",
-    "       'process_history_table',\n",
-    "       'file_history_table',\n",
-    "       'node_id_retry_table'\n",
-    "    ])\n"
+    "clear_redis_caches()\n"
    ]
   }
  ],
