Make some more methods public

--- a/Grapl Provision.ipynb
+++ b/Grapl Provision.ipynb
@@ -26,18 +26,6 @@
     "    def self_type() -> str:\n",
     "        return 'Any'\n",
     "\n",
-    "class RiskSchema(NodeSchema):\n",
-    "    def __init__(self):\n",
-    "        super(RiskSchema, self).__init__()\n",
-    "        (\n",
-    "            self\n",
-    "            .with_str_prop('analyzer_name')\n",
-    "            .with_int_prop('risk_score')\n",
-    "        )\n",
-    "    \n",
-    "    @staticmethod\n",
-    "    def self_type() -> str:\n",
-    "        return 'Risk'\n",
     "    \n",
     "class LensSchema(NodeSchema):\n",
     "    def __init__(self):\n",
@@ -424,7 +412,7 @@
      "evalue": "invalid syntax (<ipython-input-5-3ec0c580d450>, line 23)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-3ec0c580d450>\"\u001b[0;36m, line \u001b[0;32m23\u001b[0m\n\u001b[0;31m    cleartext +=\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001B[0;36m  File \u001B[0;32m\"<ipython-input-5-3ec0c580d450>\"\u001B[0;36m, line \u001B[0;32m23\u001B[0m\n\u001B[0;31m    cleartext +=\u001B[0m\n\u001B[0m                 ^\u001B[0m\n\u001B[0;31mSyntaxError\u001B[0m\u001B[0;31m:\u001B[0m invalid syntax\n"
      ]
     }
    ],
@@ -532,15 +520,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.5"
-  },
-  "pycharm": {
-   "stem_cell": {
-    "cell_type": "raw",
-    "source": [],
-    "metadata": {
-     "collapsed": false
-    }
-   }
   }
  },
  "nbformat": 4,
