--- a/src/python/grapl-notebook/Demo_Engagement.ipynb
+++ b/src/python/grapl-notebook/Demo_Engagement.ipynb
@@ -20,9 +20,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "mclient = LocalMasterGraphClient()\n",
-    "eclient = LocalEngagementGraphClient()\n",
-    "cclient = CopyingDgraphClient(mclient, eclient)"
+    "mclient = LocalMasterGraphClient()"
    ],
    "metadata": {
     "collapsed": false,
@@ -36,7 +34,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "engagement = EngagementView.get_or_create(cclient, \"Demo\")"
+    "engagement = EngagementView.get_or_create(mclient, \"Demo\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -120,15 +118,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.6"
-  },
-  "pycharm": {
-   "stem_cell": {
-    "cell_type": "raw",
-    "source": [],
-    "metadata": {
-     "collapsed": false
-    }
-   }
   }
  },
  "nbformat": 4,
